force-app/main/default/objects/Agent_KPI_Item__c/Agent_KPI_Item__c.object-meta.xml
<CustomObject>
    <label>Agent KPI Item</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent KPI Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>