force-app/main/default/objects/Agent_KPI_Item__c/fields/Actual_Data__c.field-meta.xml
<CustomField>
    <fullName>Actual_Data__c</fullName>
    <label>Actual Data</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>