force-app/main/default/objects/Agent_KPI_Item__c/fields/Actual_Point__c.field-meta.xml
<CustomField>
    <fullName>Actual_Point__c</fullName>
    <formula>VALUE(TEXT(Actual_Score__c)) * Weight__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>