force-app/main/default/objects/Agent_KPI_Item__c/fields/Actual_Score__c.field-meta.xml
<CustomField>
    <fullName>Actual_Score__c</fullName>
    <label>Actual Score</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Score__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>