force-app/main/default/objects/Agent_KPI_Item__c/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <formula>Agent_KPI__r.Agent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent ID</label>
    <type>Text</type>
</CustomField>