force-app/main/default/objects/Agent_KPI_Item__c/fields/Agent_KPI__c.field-meta.xml
<CustomField>
    <fullName>Agent_KPI__c</fullName>
    <label>Agent KPI</label>
    <referenceTo>Agent_KPI__c</referenceTo>
    <relationshipLabel>Agent KPI Item</relationshipLabel>
    <relationshipName>Agent_KPI_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>