force-app/main/default/objects/Agent_KPI_Item__c/fields/Case_Count_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Count_Email__c</fullName>
    <label>Case - Count Email</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>