force-app/main/default/objects/Agent_KPI_Item__c/fields/Case_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Case_Inquiry__c</fullName>
    <label>Case - Inquiry</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>