force-app/main/default/objects/Agent_KPI_Item__c/fields/Case_Request__c.field-meta.xml
<CustomField>
    <fullName>Case_Request__c</fullName>
    <label>Case - Request</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>