force-app/main/default/objects/Agent_KPI_Item__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quality Control</fullName>
            </value>
            <value>
                <fullName>PureCloud - Attendance</fullName>
            </value>
            <value>
                <fullName>PureCloud - Latetime</fullName>
            </value>
            <value>
                <fullName>PureCloud - Productivity</fullName>
            </value>
            <value>
                <fullName>PureCloud - AHT</fullName>
            </value>
            <value>
                <fullName>ICF - Negative Feedback</fullName>
            </value>
            <value>
                <fullName>Case - Email</fullName>
            </value>
            <value>
                <fullName>Case - LiveChat</fullName>
            </value>
            <value>
                <fullName>Case - Email and LiveChat</fullName>
            </value>
            <value>
                <fullName>Case - Inquiry</fullName>
            </value>
            <value>
                <fullName>Case - Request</fullName>
            </value>
            <value>
                <fullName>Case - CHS</fullName>
            </value>
            <value>
                <fullName>Case - Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>