force-app/main/default/objects/Agent_KPI_Item__c/fields/ICF_Negative_Feedback__c.field-meta.xml
<CustomField>
    <fullName>ICF_Negative_Feedback__c</fullName>
    <label>ICF - Negative Feedback</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>