force-app/main/default/objects/Agent_KPI_Item__c/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <formula>Agent_KPI__r.Master__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master</label>
    <type>Checkbox</type>
</CustomField>