force-app/main/default/objects/Agent_KPI_Item__c/fields/Master_Data_1__c.field-meta.xml
<CustomField>
    <fullName>Master_Data_1__c</fullName>
    <label>Master Data 1</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>