force-app/main/default/objects/Agent_KPI_Item__c/fields/Master_Data_1_Detail__c.field-meta.xml
<CustomField>
    <fullName>Master_Data_1_Detail__c</fullName>
    <label>Master Data 1 Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>