force-app/main/default/objects/Agent_KPI_Item__c/fields/Master_Data_3__c.field-meta.xml
<CustomField>
    <fullName>Master_Data_3__c</fullName>
    <label>Master Data 3</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>