force-app/main/default/objects/Agent_KPI_Item__c/fields/Parameter__c.field-meta.xml
<CustomField>
    <fullName>Parameter__c</fullName>
    <label>Parameter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discipline</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Productivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>