force-app/main/default/objects/Agent_KPI_Item__c/fields/PureCloud_Count_Attendance__c.field-meta.xml
<CustomField>
    <fullName>PureCloud_Count_Attendance__c</fullName>
    <label>PureCloud - Count Attendance</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>