force-app/main/default/objects/Agent_KPI_Item__c/fields/PureCloud_Count_Days__c.field-meta.xml
<CustomField>
    <fullName>PureCloud_Count_Days__c</fullName>
    <description>for Productivity</description>
    <inlineHelpText>for Productivity</inlineHelpText>
    <label>PureCloud - Count Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>