force-app/main/default/objects/Agent_KPI_Item__c/fields/PureCloud_Sum_AHT__c.field-meta.xml
<CustomField>
    <fullName>PureCloud_Sum_AHT__c</fullName>
    <label>PureCloud - Sum AHT</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>