force-app/main/default/objects/Agent_KPI_Item__c/fields/PureCloud_Sum_Minute__c.field-meta.xml
<CustomField>
    <fullName>PureCloud_Sum_Minute__c</fullName>
    <description>for Productivity</description>
    <inlineHelpText>for Productivity</inlineHelpText>
    <label>PureCloud - Sum Minute</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>