force-app/main/default/objects/Agent_KPI_Item__c/fields/Quality_Control_Data__c.field-meta.xml
<CustomField>
    <fullName>Quality_Control_Data__c</fullName>
    <label>Quality Control - Data</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>