force-app/main/default/objects/Agent_KPI_Item__c/fields/Score_Auto__c.field-meta.xml
<CustomField>
    <fullName>Score_Auto__c</fullName>
    <label>Score Auto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>