force-app/main/default/objects/Agent_KPI_Item__c/fields/Type_Score__c.field-meta.xml
<CustomField>
    <fullName>Type_Score__c</fullName>
    <label>Type Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>